--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,20 @@
-<ion-header [translucent]="true">
+<!-- tab1.page.html -->
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <ion-title>Mis Noticias</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let noticia of noticiasDisponibles">
+      <ion-checkbox slot="start" (ionChange)="seleccionarNoticia(noticia, $event.detail.checked)"></ion-checkbox>
+      <ion-label>
+        <!-- color="primary" para mostrar el source.name en azul -->
+        <ion-text color="primary">{{ noticia.source.name }}</ion-text>
+        <p>{{ noticia.title }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
+
